# aegis-vault

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/aegis_vault/: __main__.py  cli.py  converter.py  crypto.py  slots.py  vault.py
tests/: converter_test.py  crypto_test.py  slots_test.py
