[project]
name = "aegis-vault"
version = "0.1.0"
description = "Python reimplementation of Aegis 2FA vault encryption"
readme = "README.md"
license = "ISC"
authors = [
    { name = "Nikita Karamov", email = "me@kytta.dev" }
]
requires-python = ">=3.9"
dependencies = [
]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"
