[project]
name = "aegis-vault"
version = "0.1.0"
description = "Python reimplementation of Aegis 2FA vault encryption"
readme = "README.md"
license = "ISC"
authors = [
    { name = "Nikita Karamov", email = "me@kytta.dev" }
]
requires-python = ">=3.9"
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=24.1.0",
    "cryptography>=35",
]

[project.scripts]
aegis = "aegis_vault.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"
